# better-scraper

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: pypi-build.yml
app/: main.py
better_scraper/: __init__.py  web_search.py
better_scraper/llm/: __init__.py  base.py  gemini.py  openai.py
better_scraper/search/: __init__.py  base.py  ddgs.py  rerank.py
docker/: Dockerfile  docker-compose.yml
tests/: test_llm_engines.py  test_web_search.py
