[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "better-scraper"
version = "0.1.0"
description = "A simple Python library to search the web using DuckDuckGo and return summarized results."
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
dependencies = [
    "duckduckgo-search>=4.4.2"
]

[tool.setuptools.packages.find]
include = ["better_scraper*"]

[project.urls]
Homepage = "https://github.com/yourusername/better-scraper" 