[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "better-scraper"
version = "0.1.1"
description = "A simple Python library to search the web using DuckDuckGo and return summarized results."
authors = [
    { name="xriminact", email="hammeerraj@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
dependencies = [
    "ddgs>=9.4.0"
]

[tool.setuptools.packages.find]
include = ["better_scraper*"]

[project.urls]
Homepage = "https://github.com/criminact/better-scraper" 